[package]
name = "calendarrelay"
version = "0.2.4"
edition = "2021"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["aes"] }
base64 = "0.22.1"
clap = { version = "4.5.6", features = ["derive"] }
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.5", features = ["tokio"]}
pbkdf2 = { version = "0.12.2", features = ["sha2"]}
sha2 = "0.10.8"
sha256 = "1.5.0"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros", "signal" , "sync", "net"] }





